Fix content of Likes and Dislikes

--- a/dislikes.html
+++ b/dislikes.html
@@ -93,7 +93,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-" id="bonetCard" style="align-content: right">
+            <div class="col-" id="bonetCard" style="align-content: right" hidden>
                 <div class="card explore_card">
                     <img src="images/products/bonet.jpg" class="card-img-top food" alt="Bonet">
                     <div class="card-body explore_card_body">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="chocolate-strawberriesCard">
+            <div class="col-" style="align-content: right" id="chocolate-strawberriesCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/chocolate-strawberries.jpg" class="card-img-top food"
                         alt="Chocolate-Strawberries">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="salmonCard">
+            <div class="col-" style="align-content: right" id="salmonCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/salmon.jpg" class="card-img-top food" alt="Salmon">
                     <div class="card-body explore_card_body">
@@ -161,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="greeksaladCard">
+            <div class="col-" style="align-content: right" id="greeksaladCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/greek%20salad.jpg" class="card-img-top food" alt="Greek Salad">
                     <div class="card-body explore_card_body">
@@ -194,7 +194,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="bbq-chickenCard">
+            <div class="col-" style="align-content: right" id="bbq-chickenCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/bbq-chicken.jpg" class="card-img-top food" alt="Grilled chicken thigh">
                     <div class="card-body explore_card_body">
@@ -205,7 +205,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="burgerCard">
+            <div class="col-" style="align-content: right" id="burgerCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/burger.jpg" class="card-img-top food" alt="Burger">
                     <div class="card-body explore_card_body">
@@ -216,7 +216,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="chickenCard">
+            <div class="col-" style="align-content: right" id="chickenCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/chicken.jpg" class="card-img-top food" alt="Chicken">
                     <div class="card-body explore_card_body">
@@ -227,7 +227,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="souvlakiCard">
+            <div class="col-" style="align-content: right" id="souvlakiCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/souvlaki.jpg" class="card-img-top food" alt="Souvlaki">
                     <div class="card-body explore_card_body">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="pizzaCard">
+            <div class="col-" style="align-content: right" id="pizzaCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/pizza.jpg" class="card-img-top food" alt="Pizza">
                     <div class="card-body explore_card_body">
@@ -249,7 +249,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="tortillaCard">
+            <div class="col-" style="align-content: right" id="tortillaCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/tortilla.jpeg" class="card-img-top food" alt="Tortilla">
                     <div class="card-body explore_card_body">
@@ -260,7 +260,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="gyrosCard">
+            <div class="col-" style="align-content: right" id="gyrosCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/gyros.jpg" class="card-img-top food" alt="Gyros">
                     <div class="card-body explore_card_body">
@@ -271,7 +271,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="clubCard">
+            <div class="col-" style="align-content: right" id="clubCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/club.jpg" class="card-img-top food" alt="Club Sandwich">
                     <div class="card-body explore_card_body">
@@ -282,7 +282,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="saladCard">
+            <div class="col-" style="align-content: right" id="saladCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/salad.jpg" class="card-img-top food" alt="Salad">
                     <div class="card-body explore_card_body">
@@ -304,7 +304,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="sushiCard">
+            <div class="col-" style="align-content: right" id="sushiCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/sushi.jpg" class="card-img-top food" alt="Sushi">
                     <div class="card-body explore_card_body">
@@ -315,7 +315,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="doughnutsCard">
+            <div class="col-" style="align-content: right" id="doughnutsCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/doughnuts.jpg" class="card-img-top food" alt="Doughnuts">
                     <div class="card-body explore_card_body">
@@ -326,7 +326,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="fruit_cakeCard">
+            <div class="col-" style="align-content: right" id="fruit_cakeCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/fruit_cake.jpg" class="card-img-top food" alt="Fruit Cake">
                     <div class="card-body explore_card_body">
@@ -337,7 +337,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="coffeeCard">
+            <div class="col-" style="align-content: right" id="coffeeCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/coffee.jpg" class="card-img-top food" alt="Coffee">
                     <div class="card-body explore_card_body">
@@ -348,7 +348,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="kleftikoCard">
+            <div class="col-" style="align-content: right" id="kleftikoCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/kleftiko.jpg" class="card-img-top food" alt="Kleftiko">
                     <div class="card-body explore_card_body">
@@ -359,7 +359,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="loukoumadesCard">
+            <div class="col-" style="align-content: right" id="loukoumadesCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/loukoumades.jpg" class="card-img-top food" alt="Loukoumades">
                     <div class="card-body explore_card_body">
@@ -447,7 +447,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="koupepiaCard">
+            <div class="col-" style="align-content: right" id="koupepiaCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/koupepia.jpg" class="card-img-top food" alt="Koupepia">
                     <div class="card-body explore_card_body">
@@ -458,7 +458,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="sweetandsourCard">
+            <div class="col-" style="align-content: right" id="sweetandsourCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/sweetandsour.jpg" class="card-img-top food" alt="Sweet & Sour">
                     <div class="card-body explore_card_body">
@@ -469,7 +469,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="steakCard">
+            <div class="col-" style="align-content: right" id="steakCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/steak.jpg" class="card-img-top food" alt="Steak">
                     <div class="card-body explore_card_body">
@@ -480,7 +480,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="villagesaladCard">
+            <div class="col-" style="align-content: right" id="villagesaladCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/village_salad.jpg" class="card-img-top food" alt="Village Salad">
                     <div class="card-body explore_card_body">
@@ -491,7 +491,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="ribsCard">
+            <div class="col-" style="align-content: right" id="ribsCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/ribs.jpg" class="card-img-top food" alt="BBQ Ribs">
                     <div class="card-body explore_card_body">
@@ -502,7 +502,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="friedchickenCard">
+            <div class="col-" style="align-content: right" id="friedchickenCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/friedchicken.jpeg" class="card-img-top food" alt="Fried Chicken">
                     <div class="card-body explore_card_body">
@@ -524,7 +524,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="porkchopCard">
+            <div class="col-" style="align-content: right" id="porkchopCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/porkchop.jpg" class="card-img-top food" alt="Pork Chop">
                     <div class="card-body explore_card_body">
@@ -535,7 +535,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="gemistaCard">
+            <div class="col-" style="align-content: right" id="gemistaCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/gemista.jpg" class="card-img-top food" alt="Gemista">
                     <div class="card-body explore_card_body">
@@ -546,7 +546,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="halloumiCard">
+            <div class="col-" style="align-content: right" id="halloumiCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/halloumi.jpg" class="card-img-top food" alt="Halloumi">
                     <div class="card-body explore_card_body">
