--- a/likes.html
+++ b/likes.html
@@ -104,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" id="saganakiCard" style="align-content: right">
+            <div class="col-" id="saganakiCard" style="align-content: right" hidden>
                 <div class="card explore_card">
                     <img src="images/products/saganaki.jpg" class="card-img-top food" alt="Saganaki">
                     <div class="card-body explore_card_body">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="maridesCard">
+            <div class="col-" style="align-content: right" id="maridesCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/marides.jpg" class="card-img-top food" alt="Marides">
                     <div class="card-body explore_card_body">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="paellaCard">
+            <div class="col-" style="align-content: right" id="paellaCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/paella.jpg" class="card-img-top food" alt="Paella">
                     <div class="card-body explore_card_body">
@@ -172,7 +172,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="goatyoghurtCard">
+            <div class="col-" style="align-content: right" id="goatyoghurtCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/goat%20yoghurt.jpg" class="card-img-top food" alt="Goat Yoghurt">
                     <div class="card-body explore_card_body">
@@ -183,7 +183,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="jackedpotatoCard">
+            <div class="col-" style="align-content: right" id="jackedpotatoCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/jacked%20potato.jpg" class="card-img-top food" alt="Jacked Potatoes">
                     <div class="card-body explore_card_body">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="pizzaCard">
+            <div class="col-" style="align-content: right" id="pizzaCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/pizza.jpg" class="card-img-top food" alt="Pizza">
                     <div class="card-body explore_card_body">
@@ -293,7 +293,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="noodlesCard">
+            <div class="col-" style="align-content: right" id="noodlesCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/noodles.jpg" class="card-img-top food" alt="Noodles">
                     <div class="card-body explore_card_body">
@@ -370,7 +370,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="revithiaCard">
+            <div class="col-" style="align-content: right" id="revithiaCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/revithia.jpg" class="card-img-top food" alt="Revithia">
                     <div class="card-body explore_card_body">
@@ -381,7 +381,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="rokforCard">
+            <div class="col-" style="align-content: right" id="rokforCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/rokfor.jpg" class="card-img-top food" alt="Roquefort">
                     <div class="card-body explore_card_body">
@@ -392,7 +392,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="agkinaresCard">
+            <div class="col-" style="align-content: right" id="agkinaresCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/agkinares.jpg" class="card-img-top food" alt="Agkinares">
                     <div class="card-body explore_card_body">
@@ -403,7 +403,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="sardelesCard">
+            <div class="col-" style="align-content: right" id="sardelesCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/sardeles.jpg" class="card-img-top food" alt="Sardeles">
                     <div class="card-body explore_card_body">
@@ -414,7 +414,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="kounoupidiCard">
+            <div class="col-" style="align-content: right" id="kounoupidiCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/kounoupidi.jpg" class="card-img-top food" alt="Kounoupidi">
                     <div class="card-body explore_card_body">
@@ -425,7 +425,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="beansCard">
+            <div class="col-" style="align-content: right" id="beansCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/beans.jpg" class="card-img-top food" alt="Beans">
                     <div class="card-body explore_card_body">
@@ -436,7 +436,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="koupesCard">
+            <div class="col-" style="align-content: right" id="koupesCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/koupes.jpg" class="card-img-top food" alt="Koupes">
                     <div class="card-body explore_card_body">
@@ -513,7 +513,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="lasagnaCard">
+            <div class="col-" style="align-content: right" id="lasagnaCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/lasagna.jpg" class="card-img-top food" alt="Lasagna">
                     <div class="card-body explore_card_body">
@@ -524,7 +524,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-" style="align-content: right" id="porkchopCard">
+            <div class="col-" style="align-content: right" id="porkchopCard" hidden>
                 <div class="card explore_card">
                     <img src="images/products/porkchop.jpg" class="card-img-top food" alt="Pork Chop">
                     <div class="card-body explore_card_body">
