Delete Journey functionality

--- a/likes.html
+++ b/likes.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Likes</title>
+    <link rel="shortcut icon" href="images/logo/foody_fork.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -571,7 +572,7 @@
                 </div>
             </div>
             <button class="btn btn-outline-secondary explore_card btn_align_center"
-                onclick="window.location.href='explore.html'">
+                onclick="window.location.href='explore.html'"style="height:320px">
                 <i class="fa fa-plus fa-3x" aria-hidden="true"></i><br>
                 <h5>Add Likes</h5>
             </button>
