--- a/myJourneys.html
+++ b/myJourneys.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Journeys</title>
+    <link rel="shortcut icon" href="images/logo/foody_fork.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -93,7 +94,7 @@
     <div class="container-fluid">
         <div class="row">
             <!-- Meat Journey -->
-            <div class="col-" style="align-content: right">
+            <div class="col-" id="meatJourneyCard"style="align-content: right">
                 <div class="card journey_card">
                     <img src="images/journeys/meatlover.png" class="card-img-top journey" alt="Meat Lover">
                     <div class="card-body journey_card_body">
@@ -102,14 +103,14 @@
                                 class="fa fa-eye" aria-hidden="true"></i>&nbsp View</button>
                         <button class="btn btn-primary" onclick="window.location.href='exploreDemoMeat.html'"><i
                                 class="fa fa-cog" aria-hidden="true"></i>&nbsp Edit</button>
-                        <button class="btn btn-danger float-right"><i class="fa fa-trash" aria-hidden="true"></i>&nbsp
+                        <button class="btn btn-danger float-right" onclick="hideElement('meatJourneyCard')"><i class="fa fa-trash" aria-hidden="true"></i>&nbsp
                             Delete</button>
                     </div>
                 </div>
             </div>
 
             <!-- Mom Journey -->
-            <div class="col-" style="align-content: right">
+            <div class="col-" id="momJourneyCard"style="align-content: right">
                 <div class="card journey_card">
                     <img src="images/journeys/momjourney.png" class="card-img-top journey" alt="Meat Lover">
                     <div class="card-body journey_card_body">
@@ -118,12 +119,12 @@
                                 class="fa fa-eye" aria-hidden="true"></i>&nbsp View</button>
                         <button class="btn btn-primary" onclick="window.location.href='exploreDemoMom.html'"><i
                                 class="fa fa-cog" aria-hidden="true"></i>&nbsp Edit</button>
-                        <button class="btn btn-danger float-right"><i class="fa fa-trash" aria-hidden="true"></i>&nbsp
+                        <button class="btn btn-danger float-right" onclick="hideElement('momJourneyCard')"><i class="fa fa-trash" aria-hidden="true"></i>&nbsp
                             Delete</button>
                     </div>
                 </div>
             </div>
-            <button class="btn btn-outline-secondary journey_card" onclick="window.location.href='explore.html'"><i
+            <button class="btn btn-outline-secondary journey_card" onclick="window.location.href='explore.html'" style="height:380px"><i
                     class="fa fa-plus fa-3x" aria-hidden="true"></i><br>
                 <h5>Create Journey</h5>
             </button>
@@ -210,7 +211,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer  justify-content-between">
+                <div class="modal-footer justify-content-between">
                     <button class="btn btn-danger float-left"><i class="fa fa-trash" aria-hidden="true"></i>&nbsp
                         Delete</button>
                     <button class="btn btn-primary"><i class="fa fa-cog" aria-hidden="true"></i>&nbsp
