Edit button in Journey

--- a/explore.html
+++ b/explore.html
@@ -13,6 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
@@ -102,8 +103,8 @@
                 <label for="exampleInputEmail1">My Journey's Title</label>
                 <input class="form-control" id="journeysTitle" type="text" placeholder="Enter Journey's Title" required>
             </div>
-            <button type=" cancel" class="btn btn-secondary float-left">Cancel</button>
-            <button type="submit" class="btn btn-success float-right">Save</button>
+            <button type="button" class="btn btn-secondary float-left" onclick="journeyCancel()">Cancel</button>
+            <button type="button" class="btn btn-success float-right" onclick="journeySave()">Save</button>
         </form>
         <!-- hidden card na tis kano display -->
         <div class="journeysContent" id="journeysContent">
@@ -456,6 +457,12 @@
     </div>
     <!-- Page content -->
     <div class="main">
+        <div class="jumbotron jumbotron-fluid" style="margin:10px;">
+            <div class="container">
+                <h1 class="display-4">Let's create a Journey! :D</h1>
+                <p class="lead">Click "+ Add" to add foods that you like in the Journey. </p>
+            </div>
+        </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-" id="burgerExplore" style="align-content: right">
