--- a/likes.html
+++ b/likes.html
@@ -15,6 +15,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
@@ -90,7 +91,7 @@
     </nav>
     <div class="jumbotron jumbotron-fluid" style="margin:10px;">
         <div class="container">
-            <h1 class="display-4">Food that I love :)</h1>
+            <h1 class="display-4">Food that I love! :)</h1>
             <p class="lead">I could eat these food all day!</p>
         </div>
     </div>
@@ -572,7 +573,7 @@
                 </div>
             </div>
             <button class="btn btn-outline-secondary explore_card btn_align_center"
-                onclick="window.location.href='explore.html'"style="height:320px">
+                onclick="window.location.href='explore.html'" style="height:320px">
                 <i class="fa fa-plus fa-3x" aria-hidden="true"></i><br>
                 <h5>Add Likes</h5>
             </button>
