Add delete button in Explore Journey

--- a/exploreDemoMeat.html
+++ b/exploreDemoMeat.html
@@ -454,6 +454,7 @@
                 </div>
             </div>
         </div>
+        <button type="button" class="btn btn-danger btn-block" onclick="journeyDelete()">Delete Journey</button>
     </div>
     <!-- Page content -->
     <div class="main">
