Add links to dropdown

--- a/dislikes.html
+++ b/dislikes.html
@@ -62,25 +62,25 @@
                     aria-labelledby=" dropdownMenuButton">
                     <h4 class="dropdown-item">Georgia Kapitsaki</h4>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item">
+                    <a class="dropdown-item" href="https://foody.com.cy/">
                         <h6><i class="fa fa-history  fa-lg" aria-hidden="true"></i>&nbsp Past
                             Orders</h6>
                     </a>
-                    <a class="dropdown-item">
+                    <a class="dropdown-item" href="https://foody.com.cy/">
                         <h6><i class="fa fa-home  fa-lg" aria-hidden="true"></i>&nbsp Addresses</h6>
                     </a>
-                    <a class="dropdown-item">
+                    <a class="dropdown-item" href="https://foody.com.cy/">
                         <h6><i class="fa fa-cog fa-lg" aria-hidden="true"></i>&nbsp Settings</h6>
                     </a>
-                    <a class="dropdown-item">
+                    <a class="dropdown-item" href="https://foody.com.cy/">
                         <h6><i class="fa fa-language  fa-lg" aria-hidden="true"></i>&nbsp Language</h6>
                     </a>
-                    <a class="dropdown-item">
+                    <a class="dropdown-item" href="https://foody.com.cy/">
                         <h6><i class="fa fa-adjust  fa-lg" aria-hidden="true"></i>&nbsp Dark
                             Mode</h6>
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item">
+                    <a class="dropdown-item" href="https://foody.com.cy/">
                         <h6><i class="fa fa-sign-out  fa-lg" aria-hidden="true"></i>&nbsp Logout</h6>
                     </a>
                 </div>
