--- a/myJourneys.html
+++ b/myJourneys.html
@@ -92,46 +92,44 @@
             <p class="lead">Are you hungry? Let's explore your Journeys!</p>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="row">
-            <!-- Meat Journey -->
-            <div class="col-" id="meatJourneyCard" style="align-content: right">
-                <div class="card journey_card">
-                    <img src="images/journeys/meatlover.png" class="card-img-top journey" alt="Meat Lover">
-                    <div class="card-body journey_card_body">
-                        <h5 class="card-title" style="text-align: center;">Meat Lover</h5>
-                        <button class="btn btn-primary" data-toggle="modal" data-target="#meatLoverModal"><i
-                                class="fa fa-eye" aria-hidden="true"></i>&nbsp View</button>
-                        <button class="btn btn-primary" onclick="window.location.href='exploreDemoMeat.html'"><i
-                                class="fa fa-cog" aria-hidden="true"></i>&nbsp Edit</button>
-                        <button class="btn btn-danger float-right" onclick="hideElement('meatJourneyCard')"><i
-                                class="fa fa-trash" aria-hidden="true"></i>&nbsp
-                            Delete</button>
-                    </div>
+    <div class="card-deck" style="margin-left:6px;">
+        <!-- Meat Journey -->
+        <div class="col-" id="meatJourneyCard" style="align-content: right">
+            <div class="card journey_card">
+                <img src="images/journeys/meatlover.png" class="card-img-top journey" alt="Meat Lover">
+                <div class="card-body journey_card_body">
+                    <h5 class="card-title" style="text-align: center;">Meat Lover</h5>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#meatLoverModal"><i
+                            class="fa fa-eye" aria-hidden="true"></i>&nbsp View</button>
+                    <button class="btn btn-primary" onclick="window.location.href='exploreDemoMeat.html'"><i
+                            class="fa fa-cog" aria-hidden="true"></i>&nbsp Edit</button>
+                    <button class="btn btn-danger float-right" onclick="hideElement('meatJourneyCard')"><i
+                            class="fa fa-trash" aria-hidden="true"></i>&nbsp
+                        Delete</button>
                 </div>
             </div>
-
-            <!-- Mom Journey -->
-            <div class="col-" id="momJourneyCard" style="align-content: right">
-                <div class="card journey_card">
-                    <img src="images/journeys/momjourney.png" class="card-img-top journey" alt="Meat Lover">
-                    <div class="card-body journey_card_body">
-                        <h5 class="card-title" style="text-align: center;">My mom is better than yours!</h5>
-                        <button class="btn btn-primary" data-toggle="modal" data-target="#betterMomModal"><i
-                                class="fa fa-eye" aria-hidden="true"></i>&nbsp View</button>
-                        <button class="btn btn-primary" onclick="window.location.href='exploreDemoMom.html'"><i
-                                class="fa fa-cog" aria-hidden="true"></i>&nbsp Edit</button>
-                        <button class="btn btn-danger float-right" onclick="hideElement('momJourneyCard')"><i
-                                class="fa fa-trash" aria-hidden="true"></i>&nbsp
-                            Delete</button>
-                    </div>
-                </div>
-            </div>
-            <button class="btn btn-outline-secondary journey_card" onclick="window.location.href='explore.html'"
-                style="height:380px"><i class="fa fa-plus fa-3x" aria-hidden="true"></i><br>
-                <h5>Create Journey</h5>
-            </button>
         </div>
+
+        <!-- Mom Journey -->
+        <div class="col-" id="momJourneyCard" style="align-content: right">
+            <div class="card journey_card">
+                <img src="images/journeys/momjourney.png" class="card-img-top journey" alt="Meat Lover">
+                <div class="card-body journey_card_body">
+                    <h5 class="card-title" style="text-align: center;">My mom is better than yours!</h5>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#betterMomModal"><i
+                            class="fa fa-eye" aria-hidden="true"></i>&nbsp View</button>
+                    <button class="btn btn-primary" onclick="window.location.href='exploreDemoMom.html'"><i
+                            class="fa fa-cog" aria-hidden="true"></i>&nbsp Edit</button>
+                    <button class="btn btn-danger float-right" onclick="hideElement('momJourneyCard')"><i
+                            class="fa fa-trash" aria-hidden="true"></i>&nbsp
+                        Delete</button>
+                </div>
+            </div>
+        </div>
+        <button class="btn btn-outline-secondary journey_card" onclick="window.location.href='explore.html'"
+            style="height:380px"><i class="fa fa-plus fa-3x" aria-hidden="true"></i><br>
+            <h5>Create Journey</h5>
+        </button>
     </div>
     <!-- Meat Lover Modal -->
     <div class="modal fade" id="meatLoverModal" tabindex="-1" role="dialog" aria-labelledby="meatLoverModalTitle"
@@ -225,6 +223,7 @@
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
