--- a/explore.html
+++ b/explore.html
@@ -473,7 +473,7 @@
                 <div class="card explore_card">
                     <img src="images/products/burger.jpg" class="card-img-top food" alt="Burger">
                     <div class="card-body explore_card_body">
-                        <h5 class="card-title" style="text-align: center;">Burger</h5>
+                        <h5 class="card-title " style="text-align: center">Burger</h5>
                         <p class="card-text" style="text-align: center">Juicy burgers!</p>
                         <button class="btn btn-outline-success" onclick="addToLikes()"><i class="fa fa-thumbs-up"
                                 aria-hidden="true"></i></button>
@@ -491,7 +491,7 @@
                     <div class="card explore_card">
                         <img src="images/products/club.jpg" class="card-img-top food" alt="Club Sanwich">
                         <div class="card-body explore_card_body">
-                            <h5 class="card-title" style="text-align: center;">Club Sanwich</h5>
+                            <h5 class="card-title" style="text-align: center">Club Sanwich</h5>
                             <p class="card-text" style="text-align: center">Delicious Club Sandwich!</p>
                             <button class="btn btn-outline-success" onclick="addToLikes()"><i class="fa fa-thumbs-up"
                                     aria-hidden="true"></i></button>
@@ -529,7 +529,7 @@
                     <div class="card explore_card">
                         <img src="images/products/steak.jpg" class="card-img-top food" alt="Steak">
                         <div class="card-body explore_card_body">
-                            <h5 class="card-title" style="text-align: center;">Steak</h5>
+                            <h5 class="card-title" style="text-align: center">Steak</h5>
                             <p class="card-text" style="text-align: center">For meat lovers</p>
                             <button class="btn btn-outline-success" onclick="addToLikes()"><i class="fa fa-thumbs-up"
                                     aria-hidden="true"></i></button>
@@ -567,7 +567,7 @@
                     <div class="card explore_card">
                         <img src="images/products/kebap.jpg" class="card-img-top food" alt="Kebap">
                         <div class="card-body explore_card_body">
-                            <h5 class="card-title" style="text-align: center;">Kebap</h5>
+                            <h5 class="card-title" style="text-align: center">Kebap</h5>
                             <p class="card-text" style="text-align: center">Turkish meat!</p>
                             <button class="btn btn-outline-success" onclick="addToLikes()"><i class="fa fa-thumbs-up"
                                     aria-hidden="true"></i></button>
