Add title to already created Journeys

--- a/explore.html
+++ b/explore.html
@@ -491,7 +491,7 @@
                     <div class="card explore_card">
                         <img src="images/products/club.jpg" class="card-img-top food" alt="Club Sanwich">
                         <div class="card-body explore_card_body">
-                            <h5 class="card-title" style="text-align: center">Club Sanwich</h5>
+                            <h5 class="card-title" style="text-align: center">Club Sandwich</h5>
                             <p class="card-text" style="text-align: center">Delicious Club Sandwich!</p>
                             <button class="btn btn-outline-success" onclick="addToLikes()"><i class="fa fa-thumbs-up"
                                     aria-hidden="true"></i></button>
