--- a/exploreDemoMom.html
+++ b/exploreDemoMom.html
@@ -103,7 +103,7 @@
                 <div class="form-group" style="align-content: center">
                     <label for="exampleInputEmail1">My Journey's Title</label>
                     <input class="form-control" id="journeysTitle" type="text" placeholder="Enter Journey's Title"
-                        required>
+                        value="My mom is better than yours!" required>
                 </div>
                 <button type="button" class="btn btn-secondary float-left" onclick="journeyCancel()">Cancel</button>
                 <button type="button" class="btn btn-success float-right" onclick="journeySave()">Save</button>
@@ -493,7 +493,7 @@
                     <div class="card explore_card">
                         <img src="images/products/club.jpg" class="card-img-top food" alt="Club Sanwich">
                         <div class="card-body explore_card_body">
-                            <h5 class="card-title" style="text-align: center;">Club Sanwich</h5>
+                            <h5 class="card-title" style="text-align: center;">Club Sandwich</h5>
                             <p class="card-text" style="text-align: center">Delicious Club Sandwich!</p>
                             <button class="btn btn-outline-success" onclick="addToLikes()"><i class="fa fa-thumbs-up"
                                     aria-hidden="true"></i></button>
